@@ -150,12 +150,12 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
       3
     </td>
     <td><strong>Download 
-	<a href="http://lilypond.org/download/binaries/Fedora-3/lilypond-2.4.5-1.i386.rpm">lilypond</a>,
+	<a href="http://lilypond.org/download/binaries/Fedora-3/lilypond-2.4.6-1.i386.rpm">lilypond</a>,
 	<a
-	   href="http://lilypond.org/download/binaries/Fedora-3/lilypond-documentation-2.4.5-1.i386.rpm">documentation</a></strong>
+	   href="http://lilypond.org/download/binaries/Fedora-3/lilypond-documentation-2.4.6-1.i386.rpm">documentation</a></strong>
       (<a href="#ec-fonts">NOTE</a>)
     </td>
-    <td>2.4.5</td>
+    <td>2.4.6</td>
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
   </tr>
 
@@ -188,7 +188,7 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
     <td>
       <strong>  Go <a href="macos.html">here</a></strong>
     </td>
-    <td>2.4.5</td>  
+    <td>2.4.6</td>  
     <td>
       <a href="mailto:neeracherATmacDOTcom">Matthias Neeracher</a>
     </td> 
