@@ -1,3 +1,7 @@
+2005-04-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/install/index.html: add 2.4.6
+
 2005-04-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/install/older-versions.html: remove versions no longer
